--- a/src/output.css
+++ b/src/output.css
@@ -295,11 +295,17 @@
   .bg-gray-500 {
     background-color: var(--color-gray-500);
   }
+  .bg-green-500 {
+    background-color: var(--color-green-500);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .text-4xl {
     font-size: var(--text-4xl);
